--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 	<title>阿斗</title>
 </head>
 <body>
-	<div><a href="The-Company.txt"><i>战友</i> by K.J.Parker</a></div>
-	<div><a href="Downfall-of-the-Gods.txt"><i>众神的陨落</i> by K.J.Parker</a></div>
+	<div><a href="zuowen.html"><i>时代作文微博文章列表（不含晨读）.html</i>  </a></div> 
 </body>
 </html>
