--- a/zuowen.html
+++ b/zuowen.html
@@ -386,3 +386,8 @@
 <p><a href="https://card.weibo.com/article/m/show/id/2309405097808007921813?_wb_client_=1">议题：了解故事的现实意义...</a></p>
 <p><a href="https://card.weibo.com/article/m/show/id/2309405098170391593231?_wb_client_=1">何以维生、为何而活...</a></p>
 <p><a href="https://card.weibo.com/article/m/show/id/2309405098532783915266?_wb_client_=1">马斯洛的“需要”层次...</a></p>
+<p><a href="https://card.weibo.com/article/m/show/id/2309405099623155892509?_wb_client_=1" class="paid">个人背景、时代背景... [付费]</a></p> 
+<p><a href="https://card.weibo.com/article/m/show/id/2309405099982322795037?_wb_client_=1" >什么是“有限创作法则”？...</a></p>
+<p><a href="https://card.weibo.com/article/m/show/id/2309405100348162573076?_wb_client_=1" >主题：了解故事的核心意义...</a></p> 
+<p><a href="https://card.weibo.com/article/m/show/id/2309405100720222502929?_wb_client_=1" >思想、反思想</a></p> 
+<p><a href="https://card.weibo.com/article/m/show/id/2309405101069494779930?_wb_client_=1" >故事常见的思想分类...</a></p>
