--- a/时代作文微博文章列表.html
+++ b/时代作文微博文章列表.html
@@ -1231,5 +1231,14 @@
 <p><a href="https://card.weibo.com/article/m/show/id/2309405098170391593231?_wb_client_=1">何以维生、为何而活...</a></p>
 <p><a href="https://card.weibo.com/article/m/show/id/2309405098316349440114?_wb_client_=1">2024年11月8日 晨读</a></p>
 <p><a href="https://card.weibo.com/article/m/show/id/2309405098532783915266?_wb_client_=1">马斯洛的“需要”层次...</a></p>
-
+ 
+<p><a href="https://card.weibo.com/article/m/show/id/2309405099623155892509?_wb_client_=1" class="paid">个人背景、时代背景... [付费]</a></p> 
+<p><a href="https://card.weibo.com/article/m/show/id/2309405099982322795037?_wb_client_=1" >什么是“有限创作法则”？...</a></p>
+<p><a href="https://card.weibo.com/article/m/show/id/2309405100348162573076?_wb_client_=1" >主题：了解故事的核心意义...</a></p> 
+<p><a href="https://card.weibo.com/article/m/show/id/2309405100720222502929?_wb_client_=1" >思想、反思想</a></p> 
+<p><a href="https://card.weibo.com/article/m/show/id/2309405101069494779930?_wb_client_=1" >故事常见的思想分类...</a></p>
+<p><a href="https://card.weibo.com/article/m/show/id/2309405102156654182772?_wb_client_=1" >同情、移情</a></p> 
+<p><a href="https://card.weibo.com/article/m/show/id/2309405102529800175620?_wb_client_=1" >母题：情节装置13</a></p> 
+<p><a href="https://card.weibo.com/article/m/show/id/2309405102889134850511?_wb_client_=1" >不为深刻而深刻</a></p> 
+<p><a href="https://card.weibo.com/article/m/show/id/2309405103606213771378?_wb_client_=1" >尾声：去哪儿能找到永恒的好故事？...</a></p> 
 </body></html>
